# ShareADish

./: .gitignore  README.md  package-lock.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py  ai.py  nutrition.py  recipe.py  user.py
backend/app/core/: __init__.py  config.py  file.py  instructions.py  preload.py  security.py
backend/app/data/: download.py
backend/app/database/: __init__.py  db.py
backend/app/db/: __init__.py  db.py  file.py
backend/app/schemas/: __init__.py  base.py  file.py  nutrient.py  pyid.py  recipe.py  recipe_ai.py  user.py
backend/app/services/: __init__.py  image.py  inference.py  recipe_services.py  user_services.py
backend/app/utils/: matching.py  normalize.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/account-info/: page.tsx
frontend/src/app/context/: AuthContext.tsx  UsernameContext.tsx
frontend/src/app/create-recipe/: page.tsx
frontend/src/app/edit/: RecipeEdit.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/your-account/: page.tsx
frontend/src/components/interactables/: AccountButton.tsx  BackButton.tsx  Brand.tsx  CreateRecipeButton.tsx  SearchField.tsx
frontend/src/components/layouts/: HeaderLayout.tsx
frontend/src/data/: recipeAuthors.ts  recipes.ts  userRecipes.ts
frontend/src/lib/: axios.ts  getRecipeImage.ts  updateRecipe.ts
(+28 files in other folders)
