[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.118.0",
    "openai>=2.1.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "rapidfuzz>=3.14.1",
]
